--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^6.5.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-functions": "^2.1.0",
+    "node-fetch": "^2.3.0"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
