--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -5,7 +5,7 @@
     "noUnusedLocals": true,
     "outDir": "lib",
     "sourceMap": true,
-    "strict": true,
+    "strict": false,
     "lib": [ "es2017" ],
     "target": "es2017"
   },
